# folio

./: .gitignore  Folio.jsx  cybervault_launcher.py  index.html  package-lock.json  package.json
src/: App.jsx  api.js  constants.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  lib.rs  storage.rs
src/components/: DiaryPage.jsx  GoalsPage.jsx  MoodPage.jsx  NotesPage.jsx  SettingsDropdown.jsx  WellnessPage.jsx
src/components/common/: EmojiSlider.jsx  Modal.jsx  SpiritCharacter.jsx
src/utils/: dates.js  moods.js  wellness.js
